<resources>
    <string name="app_name">Good Travel</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="keep_connected">Keep me Connected</string>
    <string name="fail_authentication">Fail Authentication</string>
    <string name="img_logo_description">Aplications Logo</string>
    <string name="new_cost">New Cost</string>
    <string name="new_travel">New Travel</string>
    <string name="my_travels">My Travels</string>
    <string name="configuration">Configuration</string>
    <string name="destiny">Destiny</string>
    <string name="travel_type">Travel Type</string>
    <string name="relax">Relax</string>
    <string name="work">Work</string>
    <string name="date_go_out">Date to go out</string>
    <string name="date_go_back">Date to go back</string>
    <string name="select_date">Select</string>
    <string name="budget">Budget</string>
    <string name="how_many_people">How many people?</string>
    <string name="save">Save</string>
    <string name="new_spent">New Spent</string>
    <string name="my_spents">My Spents</string>
    <string name="value">Value</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string-array name="spending_category">
        <item>Alimentation</item>
        <item>Fuel</item>
        <item>Transport</item>
        <item>Accommodation</item>
        <item>Othes</item>
    </string-array>
    <string name="img_travel_type_description">Description travel type</string>
    <string name="new_register">New</string>
    <string name="delete">Delete</string>
    <string name="exit">Exit</string>
    <string name="edit">Edit</string>
    <string name="archive">Archive</string>
    <string name="no_label"></string>
    <string name="delele_confirmation">Do you want to delete the register?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="options">Options</string>
    <string name="preference">Preference</string>
    <string name="travel_mode">Travel Mode</string>
    <string name="summary_travel_mode">Current date for active travel</string>
    <string name="inform_limit_value">Inform Limit Value</string>
    <string name="limit_value">Limit Value</string>
    <string name="summary_limit_value">Notify when spending exceeded the percentage informed</string>
    <string name="action_settings">Settings</string>
    <string name="saved_data">Saved Data</string>
    <string name="error_saving">Error Saving</string>
</resources>