<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#333333"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#015488" >

            <TextView
                android:id="@+id/new_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:layout_marginLeft="40dp"
                android:clickable="true"
                android:onClick="selectOptionDashboard"
                android:drawableTop="@drawable/novo_gasto"
                android:text="@string/new_cost"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/new_travel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/new_cost"
                android:layout_marginRight="40dp"
                android:clickable="true"
                android:onClick="selectOptionDashboard"
                android:drawableTop="@drawable/nova_viagem"
                android:text="@string/new_travel"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/my_travels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_travel"
                android:layout_alignLeft="@id/new_cost"
                android:layout_marginTop="140dp"
                android:clickable="true"
                android:onClick="selectOptionDashboard"
                android:drawableTop="@drawable/minhas_viagens"
                android:text="@string/my_travels"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/configuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/new_travel"
                android:layout_alignTop="@id/my_travels"
                android:clickable="true"
                android:onClick="selectOptionDashboard"
                android:drawableTop="@drawable/configuracoes"
                android:text="@string/configuration"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>